--- a/rendertest.html
+++ b/rendertest.html
@@ -56,7 +56,7 @@
 
   <body>
 
-    <canvas id="renderCanvas" touch-action="none"></canvas>
+    <canvas class="card" id="renderCanvas" touch-action="none"></canvas>
 
     <!-- touch-action="none" for best results from PEP -->
 
