--- a/rendertest.html
+++ b/rendertest.html
@@ -38,7 +38,7 @@
 <div class="threejs">
    <div id="canvas" style="height: 200px; width: 200px;"></div>
 </div>
-<script>
+<script type="module">
   // https://discourse.threejs.org/t/how-can-i-put-my-scene-inside-a-html-div/49247
 
  import * as THREE from "three";
